SASS fixes and changes
Updated the home and project SASS to accomplish the following:

1. Remove the unecessary horizontal scroll-bar on the homepage by
changing the `#wrapper` behavior to only scroll in the y-direction.
2. Make the navigation buttons on mobile devices larger. I noticed while
browsing the site on my phone, the links in the bottom nav on both the
homepage and project pages were too small. This change should make them
easier tap-targets.
3. Made the buttons in the project page nav that reveal a section
instead of opening a link proper HTML `<button>` elements for semantic
validity and accessibility reasons.

--- a/src/sass/partials/home/_nav.sass
+++ b/src/sass/partials/home/_nav.sass
@@ -5,10 +5,11 @@ nav#nav, nav#nav *
 
 nav#nav
     width: 100%
-    height: 40px
+    height: 60px
     justify-content: center
     border-top: 1px solid darken($white, 10%)
     background-color: darken($white, 5%)
+    font-size: 1.25rem
     box-shadow: 0px -5px 10px 0px rgba($slate, 0.15)
     z-index: 1
 
@@ -47,8 +48,10 @@ nav#nav
 
 =nav--sm()
     nav#nav
+        height: 40px
         border-top: none
         border-bottom: 1px solid darken($white, 8%)
+        font-size: 1rem
         box-shadow: none
         transition: box-shadow 0.4s
         &.shadow
