--- a/src/sass/partials/home/_wrapper.sass
+++ b/src/sass/partials/home/_wrapper.sass
@@ -4,5 +4,5 @@
     flex: 1
     width: 100%
     padding-top: 15px
-    overflow: scroll
+    overflow-y: scroll
     -webkit-overflow-scrolling: touch
